# astroedu

./: .gitignore  MANIFEST.in  README.md  astest.yml  config.ini  setup.cfg
assets/logo/: astroedu.ai
conda/astroedu/: meta.yaml
interactives/: blackbody_curves.ipynb  equilibrium_temperature.ipynb  stefan_boltzman_law.ipynb  wiens_law.ipynb
src/astroedu/: __build__.py  __main__.py
src/astroedu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/astroedu/classes/: Body.py  __init__.py
src/astroedu/constants/: constants.py
src/astroedu/data/: planets.txt
src/astroedu/datasets/: README.md  __init__.py  atmospheres.txt  geotherm.txt  jupiter_moons.txt  mass16.txt  neptune_moons.txt  planets.txt  saturn_moons.txt  saturn_rings.txt  uranus_moons.txt
src/astroedu/functions/: functions.py
src/astroedu/interactives/: blackbody_curves.ipynb  stefan_boltzman_law.ipynb  wiens_law.ipynb
src/astroedu/interactives/.ipynb_checkpoints/: blackbody_curves-checkpoint.ipynb
src/astroedu/planetmagfields/: __init__.py  libbfield.py  libgauss.py  planet.py  plotlib.py  potextra.py  utils.py
src/astroedu/planets/: __init__.py  planets.py
tests/: test_class_Body2D_tides.py  test_load_data.py
