[metadata]
# replace with your username:
name = astroedu
version = 0.0.1a1
author = Dimitrios Theodorakis
author_email = astrodimitrios@gmail.com
description = A python package for astronomy educators
keywords = astronomy education astrophysics
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/astroDimitrios/astroedu
project_urls =
    Bug Tracker = https://github.com/astroDimitrios/astroedu/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    subprocess
    numpy
    matplotlib
    pandas
    jupyterlab
    ipywidgets

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    astroedu = astroedu:startup