[metadata]
# replace with your username:
name = astroedu
version = 0.2.0a1
author = Dimitrios Theodorakis
author_email = astrodimitrios@gmail.com
description = A python package for astronomy educators
keywords = astronomy education astrophysics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astroDimitrios/astroedu
project_urls =
    Bug Tracker = https://github.com/astroDimitrios/astroedu/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    numpy >= 1.10.0
    matplotlib >= 3.3.0
    pandas >= 1.1
    jupyterlab >= 3.0.0
    ipywidgets >= 7.6.0
    fire >= 0.4.0 
    importlib-resources >= 5.1.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    astroedu = astroedu.__main__:main